--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
 <div class="jumbotron">
 	<h1>Welcome to my app!</h1>
-	<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>.</p>
+	<% if user_signed_in? %>
+	<P>Welcome to the inside of the application</p>
+	<% else %>
+		<p>
+				<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+				<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		</p>	
+	<% end %>
 </div>
