added image upload with paperclip

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,4 +8,5 @@
 				<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 		</p>	
 	<% end %>
+	<p>This app was created using <a href="http://onemonthrails.com" target="_blank">One Month Rails</a></p>
 </div>
